--- a/IoTDataDashboard/Layout/MainLayout.razor
+++ b/IoTDataDashboard/Layout/MainLayout.razor
@@ -8,12 +8,7 @@
     <main>
         <div class="top-row px-4 bg-primary text-white">
             <div class="container-fluid">
-                <div class="d-flex justify-content-between align-items-center">
-                    <h3>IoT Data Ingestion System</h3>
-                    <div>
-                        <span class="badge bg-success">Connected</span>
-                    </div>
-                </div>
+                <h3>IoT Sensor Dashboard</h3>
             </div>
         </div>
 
